--- a/css/login.css
+++ b/css/login.css
@@ -80,6 +80,7 @@ table {
 
 .topmenu{
 	/*height: 40px;*/
+	margin-bottom: 10px;
 }
 
 .topmenu ul{
@@ -158,8 +159,69 @@ button{
 	color: #000;
 }
 
-@media (max-width: 450px) {
+
+/*===========RWD============*/
+
+@media (max-width: 480px) {
+
+	.header{
+		height: 120px;
+	}
+
+	.search{
+	  width: 100px;
+	}
+
+	.search input #button{
+	  width: 100px;
+	  height: 50px;
+	}
+
+	.topmenu{
+	width: 70px;
+	}
+
 	.login{
+		position: relative;
+		margin-top: 100px;
 		width: 70%;
+	}
+
+	.topmenu ul{
+	float: right;
+	margin: 2px;
+	}
+}
+
+
+
+@media only screen (max-width: 320px) {
+
+	.header{
+		height: 160px;
+	}
+
+	.search{
+	  width: 50px;
+	}
+
+	.search input #button{
+	  width: 50px;
+	  height: 50px;
+	}
+
+	.topmenu{
+	width: 30px;
+	}
+
+	.topmenu ul{
+	float: left;
+	margin: 0;
+	}
+
+	.login{
+		position: relative;
+		margin-top: 200px;
+		width: 30%;
 	}
 }
